add: table with nutrients

--- a/Cookbook/Cookbook/Base.lproj/Main.storyboard
+++ b/Cookbook/Cookbook/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4WI-mV-e7l">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4WI-mV-e7l">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -56,9 +56,10 @@
                         <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OgW-l6-mla" secondAttribute="trailing" constant="23" id="4ZT-sE-gMG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bqp-QX-DCr" secondAttribute="trailing" constant="224.5" id="7Qj-7M-72p"/>
                             <constraint firstItem="OgW-l6-mla" firstAttribute="top" secondItem="Bqp-QX-DCr" secondAttribute="bottom" constant="23" id="9Re-zi-xyb"/>
                             <constraint firstItem="OgW-l6-mla" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="23" id="IvQ-g5-YvS"/>
-                            <constraint firstItem="Bqp-QX-DCr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="Tne-nS-e5Z"/>
+                            <constraint firstItem="Bqp-QX-DCr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Tne-nS-e5Z"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0Ao-mD-wy6" secondAttribute="trailing" constant="-116" id="W4P-MK-1Fr"/>
                             <constraint firstItem="0Ao-mD-wy6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="-312" id="cAK-8w-eaf"/>
                             <constraint firstItem="0Ao-mD-wy6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="-116" id="ioJ-hl-huq"/>
@@ -85,9 +86,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rC7-GE-Dwm">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="rC7-GE-Dwm">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="375"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="375" id="7dD-Np-uum"/>
+                                    <constraint firstAttribute="width" constant="414" id="hsd-LZ-ZgB"/>
                                     <constraint firstAttribute="height" constant="375" id="z73-OW-5mz"/>
                                 </constraints>
                             </imageView>
@@ -105,54 +109,72 @@
                                             <constraint firstAttribute="height" constant="45" id="ylA-d5-pxA"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                        <state key="normal" title="Nutritional values">
+                                        <state key="normal" title="Nutritional value">
                                             <color key="titleColor" systemColor="labelColor"/>
                                             <color key="titleShadowColor" name="BasicYellow"/>
                                         </state>
+                                        <connections>
+                                            <action selector="changeInfo:" destination="QQj-Ux-Y4g" eventType="touchUpInside" id="ZSu-7s-msV"/>
+                                        </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ME-zQ-78v">
-                                        <rect key="frame" x="77" y="17" width="184" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9ME-zQ-78v">
+                                        <rect key="frame" x="8" y="17" width="322" height="55"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
                                         <color key="textColor" name="BasicYellow"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredients" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bB2-Tx-5jk">
-                                        <rect key="frame" x="23" y="60" width="97" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="97" id="miS-bG-kTi"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IWC-5j-idH">
-                                        <rect key="frame" x="21" y="89" width="296" height="162"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IWC-5j-idH">
+                                        <rect key="frame" x="21" y="109" width="296" height="142"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredients" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bB2-Tx-5jk">
+                                        <rect key="frame" x="21" y="80" width="258" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="258" id="miS-bG-kTi"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gqj-2t-J3g">
+                                        <rect key="frame" x="8" y="109" width="322" height="142"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="142" id="Q2p-Rh-eji"/>
+                                            <constraint firstAttribute="width" constant="322" id="svN-J0-sck"/>
+                                        </constraints>
+                                        <color key="sectionIndexColor" systemColor="labelColor"/>
+                                    </tableView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="vcr-vg-BXq" firstAttribute="leading" secondItem="IUl-q9-F69" secondAttribute="leading" constant="59" id="5Ij-re-ASt"/>
-                                    <constraint firstItem="9ME-zQ-78v" firstAttribute="leading" secondItem="IUl-q9-F69" secondAttribute="leading" constant="77" id="8G8-55-nNP"/>
+                                    <constraint firstItem="9ME-zQ-78v" firstAttribute="leading" secondItem="IUl-q9-F69" secondAttribute="leading" constant="8" id="8G8-55-nNP"/>
+                                    <constraint firstItem="gqj-2t-J3g" firstAttribute="centerX" secondItem="IWC-5j-idH" secondAttribute="centerX" id="Fak-b4-UUK"/>
                                     <constraint firstAttribute="height" constant="325" id="HP5-0j-vkh"/>
-                                    <constraint firstAttribute="trailing" secondItem="9ME-zQ-78v" secondAttribute="trailing" constant="77" id="LGj-fV-El9"/>
-                                    <constraint firstItem="bB2-Tx-5jk" firstAttribute="leading" secondItem="IUl-q9-F69" secondAttribute="leading" constant="23" id="Nd0-mQ-3L8"/>
+                                    <constraint firstAttribute="trailing" secondItem="9ME-zQ-78v" secondAttribute="trailing" constant="8" id="LGj-fV-El9"/>
+                                    <constraint firstItem="bB2-Tx-5jk" firstAttribute="leading" secondItem="IUl-q9-F69" secondAttribute="leading" constant="21" id="Nd0-mQ-3L8"/>
+                                    <constraint firstItem="IWC-5j-idH" firstAttribute="leading" secondItem="bB2-Tx-5jk" secondAttribute="leading" id="QPp-rY-cva"/>
+                                    <constraint firstItem="gqj-2t-J3g" firstAttribute="leading" secondItem="9ME-zQ-78v" secondAttribute="leading" id="QqT-Jh-b9U"/>
                                     <constraint firstItem="vcr-vg-BXq" firstAttribute="top" secondItem="IUl-q9-F69" secondAttribute="top" constant="259" id="cEh-pN-L26"/>
-                                    <constraint firstItem="bB2-Tx-5jk" firstAttribute="top" secondItem="IUl-q9-F69" secondAttribute="top" constant="60" id="jiR-Ci-40G"/>
+                                    <constraint firstItem="gqj-2t-J3g" firstAttribute="top" secondItem="bB2-Tx-5jk" secondAttribute="bottom" constant="8" symbolic="YES" id="g7q-FQ-OLB"/>
+                                    <constraint firstItem="gqj-2t-J3g" firstAttribute="top" secondItem="IWC-5j-idH" secondAttribute="top" id="hZt-Ub-u3S"/>
+                                    <constraint firstItem="bB2-Tx-5jk" firstAttribute="top" secondItem="IUl-q9-F69" secondAttribute="top" constant="80" id="jiR-Ci-40G"/>
                                     <constraint firstItem="9ME-zQ-78v" firstAttribute="top" secondItem="IUl-q9-F69" secondAttribute="top" constant="17" id="sfk-hH-mTd"/>
                                     <constraint firstAttribute="trailing" secondItem="vcr-vg-BXq" secondAttribute="trailing" constant="59" id="tRs-Z7-4Bb"/>
+                                    <constraint firstItem="vcr-vg-BXq" firstAttribute="top" secondItem="gqj-2t-J3g" secondAttribute="bottom" constant="8" symbolic="YES" id="tgK-5z-ASE"/>
+                                    <constraint firstItem="gqj-2t-J3g" firstAttribute="bottom" secondItem="IWC-5j-idH" secondAttribute="bottom" id="zaA-Nf-v5Y"/>
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8ZZ-ry-TDw">
                                 <rect key="frame" x="38" y="677" width="338" height="185"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -172,9 +194,12 @@
                     <navigationItem key="navigationItem" id="6gs-gA-EcZ"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
+                        <outlet property="backgroundImage" destination="rC7-GE-Dwm" id="acU-H8-Qby"/>
+                        <outlet property="baseView" destination="IUl-q9-F69" id="407-Lt-SCu"/>
                         <outlet property="btnChoose" destination="vcr-vg-BXq" id="JKN-ec-ibZ"/>
                         <outlet property="ingredientsList" destination="IWC-5j-idH" id="EUz-TQ-dE1"/>
                         <outlet property="mainImage" destination="wri-SP-vcT" id="VND-1S-T7u"/>
+                        <outlet property="nutrientsTableView" destination="gqj-2t-J3g" id="KVv-rQ-6yN"/>
                         <outlet property="pointTitle" destination="bB2-Tx-5jk" id="dxG-L1-A2i"/>
                         <outlet property="recipeDescription" destination="8ZZ-ry-TDw" id="MSt-ur-IhO"/>
                         <outlet property="titleLabel" destination="9ME-zQ-78v" id="Cdq-4b-NjF"/>
@@ -187,10 +212,11 @@
         <!--Navigation Controller-->
         <scene sceneID="7qG-aE-zgr">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="4WI-mV-e7l" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4WI-mV-e7l" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="MUx-nr-tJa">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
